container-asp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asp
spec:
  selector:
    app: asp
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 80
