container-asp/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: asp
spec:
  backend:
    serviceName: asp
    servicePort: 80
